--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,8 +15,9 @@ jobs:
           go-version-file: go.mod
           cache-dependency-path: go.sum
 
+      # Golangci-lint action is flaky, so we run it manually
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd # v7.0.0
-        with:
-          version: v2.1.2
-          args: run --timeout 5m
+        shell: bash
+        run: |
+          go install github.com/golangci/golangci-lint/v2/cmd/golangci-lint@v2.1.2
+          make lint
